all look completed

--- a/index.html
+++ b/index.html
@@ -16,3 +16,22 @@
     Support
 </span>
 </div>
+<br></br>
+<br></br>
+<br></br>
+<center>
+    <img width="800" src="/landing.png" alt="">
+</center>
+<br></br>
+<br></br>
+<br></br>
+<center>
+<h1>Invest In Everything</h1>
+</center>
+<center>
+<h3>Online Platform to Invest in Stocks, derivatives,mutual fund,and more</h3>
+</center>
+<br></br>
+<center>
+    <button>Sign Up Now</button>
+</center>
