--- a/index.html
+++ b/index.html
@@ -1,37 +1,46 @@
-<div>
-    <img width="150" src="/logo.svg" alt="">
-    <span>
-    Signup
-</span>
-<span>
-    About 
-</span>
-<span>
-    Product
-</span>
-<span>
-    Pricing
-</span>
-<span>
-    Support
-</span>
+<div
+  style="
+    display: flex;
+    justify-content: space-between;
+    padding-left: 100px;
+    padding-right: 100px;
+    box-shadow: 2px 1px 2px #eee;
+  "
+>
+  <img
+    width="120"
+    height="20"
+    style="padding-top: 20px"
+    src="/logo.svg"
+    alt=""
+  />
+  <div style="display: flex">
+    <div style="padding: 20px; color: #666; cursor: pointer;" >Signup</div>
+    <div style="padding: 20px; color: #666; cursor: pointer;" >About</div>
+    <div style="padding: 20px; color: #666; cursor: pointer;" >Product</div>
+    <div style="padding: 20px; color: #666; cursor: pointer;" >Pricing</div>
+    <div style="padding: 20px; color: #666; cursor: pointer;" >Support</div>
+  </div>
 </div>
-<br></br>
-<br></br>
-<br></br>
-<center>
-    <img width="800" src="/landing.png" alt="">
-</center>
-<br></br>
-<br></br>
-<br></br>
-<center>
+
+
+
+<div style="display: flex; justify-content: center; padding-top: 40px;">
+    <img width="1000" src="/landing.png" alt="">
+</div>
+
+
+<div style="padding-top:40px; display:flex; justify-content: center; font-weight: 500;">
 <h1>Invest In Everything</h1>
-</center>
-<center>
-<h3>Online Platform to Invest in Stocks, derivatives,mutual fund,and more</h3>
-</center>
-<br></br>
-<center>
-    <button>Sign Up Now</button>
-</center>
+</div>
+
+<div style="padding-top:10px; display:flex; justify-content: center;">
+    <h2 style="font-weight: 400;">Online Platform to Invest in Stocks, derivatives,mutual fund,and more</h2>
+    </div>
+
+    <div style="display: flex; justify-content: center;">
+
+    <div style="background-color: #387ed1; padding-top:10px; padding-bottom:10px; padding-left:30px; padding-right:30px; color: white; border-radius:3px; font-size:20px; cursor:pointer;">Signup</div>
+
+</div>
+    
