--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <div style="display: flex; justify-content: center;">
 
-    <div style="background-color: #387ed1; padding-top:10px; padding-bottom:10px; padding-left:30px; padding-right:30px; color: white; border-radius:3px; font-size:20px; cursor:pointer;">Signup</div>
+    <div style="background-color: #387ed1; padding-top:10px; padding-bottom:10px; padding-left:30px; padding-right:30px; color: white; border-radius:3px; font-size:20px; cursor:pointer;">Sign Up Now</div>
 
 </div>
     
